loopfor.LoopCourseForest.scala.error
Compilation error:
LoopCourseForest:8: error: not found: value doite
    doite()
    ^