loopfor.LoopCourseForest.scala.code
for(i<-1 to 7){
  for (l<-1 to 4){
    avance(4)
    gauche()
    avance(2)
    droite()
    avance(4)
    doite()
    avance(2)
    gauche()
    avance(4)
    gauche()
  }
}